--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <footer>
         <section class="foot-sec-fi">
             <img src="images/admin.png" alt="">
-            <span>@ all right reserved foisal-io</span>
+            <span>@ all right reserved foisal0</span>
         </section>
     </footer>
     
